# build_all

./: .gitattributes  .gitignore  CMakeLists.txt  Empty_markdeep.md.htm  README.md  build_all.bat  build_all.sh  clone_all.bat  clone_all.bat.orig  clone_all.sh  clone_all.sh.orig  clone_all_ssh.bat  clone_all_ssh.bat.orig  clone_all_ssh.sh  clone_all_ssh.sh.orig  project_data.csv  pull_all.bat  pull_all.sh  push_all.bat  push_all.sh
legacy/: CMakeLists.txt
